--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body >
     <header class="my">
-        <section>
+        <section class="links" >
               <h1 id="myP"></h1>
               <h5>Desenvolvedor de Software</h5>  
               <nav>
-                    <a  href="https://github.com/Orlando-Paulo99"><button class="btn">Github</button></a>
+                  
                     <a  href="https://wa.me/+5581992624419"><button class="btn">Whatsapp</button></a>
+                    <a  href="https://github.com/Orlando-Paulo99"><button class="btn">Github</button></a>
                     <a  href="https://www.linkedin.com/in/orlando-paulo-98b83b250"><button class="btn">Linkedin</button></a>
              <!--
                    <button ><a class="btn" href="https://github.com/Orlando-Paulo99" >Github</a></button>
@@ -26,9 +27,16 @@
     <section class="habiliades" >
         <h3>Habilidades</h3>
         <div class="jobs">
-          <h4>Python</h4>
-          <h4>JavaScript</h4>
-          <h4>MySQL</h4>
+          <div class="jobs-1">
+            <h4>Python</h4>
+            <h4>JavaScript</h4>
+          </div>
+
+          <div class="jobs-2">
+            <h4>MySQL</h4>
+            <h4>ReactJS</h4>
+          </div>
+         
         </div>
     </section>
 </header>
