--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img src="my/photo.jpg" alt="">
         </section>
         <section class="links" >
-              <h1 id="myP"></h1>
-             <h1>SOBRE MIM</h1>
-              <h5>olá,me chamo orlando, sou desenvolvedor Front-End.Graduando em Engenharia de Software,atualmente estou no terceiro periodo,sempre em busca de novos desafios dentro da área de tecnologia.Possuo conhecimentos em reactJS,javascript,python e mysql.Aceito desafios e problemas para serem solucionados e inseridos em meus conhecimentos.Ao participar de hackatons,como maratonista e volutário,me trouxo conhecimentos e inspiração para a cada dia poder solucionar cada problema desejado.</h5>  
+              <p id="myP"></p>
+            
+              <p>Olá,me chamo orlando, sou desenvolvedor Front-End.Graduando em Engenharia de Software,atualmente estou no terceiro periodo,sempre em busca de novos desafios dentro da área de tecnologia.Possuo conhecimentos em reactJS,javascript,python e mysql.Aceito desafios e problemas para serem solucionados e inseridos em meus conhecimentos.Ao participar de hackatons,como maratonista e volutário,me trouxeram  conhecimentos e inspiração para a cada dia poder solucionar cada problema desejado.</p>  
         </section>
     </header>
 
